Bug 187809 - crash on picasa export
Summary: crash on picasa export
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Google (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-21 19:12 UTC by Cory
Modified: 2018-03-23 11:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cory 2009-03-21 19:12:51 UTC
Version:           0.10.0 (using KDE 4.2.1)
Compiler:          gcc 4.1.2 
OS:                Linux
Installed from:    Gentoo Packages

How to reproduce: Select a picture/album, export to picasaweb, click "start uploading" with no album created/selected.

Expected behavior: Dialog asking "Do you want to create an album?"

Backtrace:

Application: digiKam (digikam), signal SIGSEGV                                                                                                                                                                      
0x00007f0e09cbbaa1 in nanosleep () from /lib/libc.so.6                                                                                                                                                              
[Current thread is 0 (LWP 27630)]                                                                                                                                                                                   

Thread 12 (Thread 0x416b2950 (LWP 27631)):
#0  0x00007f0e0b6be9a9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0e0b928f31 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4 
#2  0x0000000000632089 in Digikam::ScanController::run (this=0xad2870) at /var/tmp/portage/media-gfx/digikam-0.10.0/work/digikam-0.10.0/digikam/scancontroller.cpp:412
#3  0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                                                                                                    
#4  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                                                                                                   
#5  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                                                                                                
#6  0x0000000000000000 in ?? ()                                                                                                                                       

Thread 11 (Thread 0x41eb3950 (LWP 27633)):
#0  0x00007f0e0b6be9a9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0e0b928f31 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4 
#2  0x00007f0e0d7a9e09 in Digikam::LoadSaveThread::run (this=0xb9f230) at /var/tmp/portage/media-gfx/digikam-0.10.0/work/digikam-0.10.0/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                                                                                                               
#4  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                                                                                                              
#5  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                                                                                                           
#6  0x0000000000000000 in ?? ()                                                                                                                                                  

Thread 10 (Thread 0x40adf950 (LWP 27634)):
#0  0x00007f0e0b6be9a9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0e0b928f31 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4 
#2  0x00007f0e0d7a9e09 in Digikam::LoadSaveThread::run (this=0xb4e630) at /var/tmp/portage/media-gfx/digikam-0.10.0/work/digikam-0.10.0/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                                                                                                               
#4  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                                                                                                              
#5  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                                                                                                           
#6  0x0000000000000000 in ?? ()                                                                                                                                                  

Thread 9 (Thread 0x426b4950 (LWP 27635)):
#0  0x00007f0e0b6bec2d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0dfd3f04cb in ?? () from /usr/lib64/libxine.so.1                              
#2  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                       
#3  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                    
#4  0x0000000000000000 in ?? ()                                                           

Thread 8 (Thread 0x42eb5950 (LWP 27636)):
#0  0x00007f0e09ce2a62 in select () from /lib/libc.so.6
#1  0x00007f0dfd41200a in xine_usec_sleep () from /usr/lib64/libxine.so.1
#2  0x00007f0dfd3fbb0e in ?? () from /usr/lib64/libxine.so.1             
#3  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0      
#4  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                   
#5  0x0000000000000000 in ?? ()                                          

Thread 7 (Thread 0x436b6950 (LWP 27637)):
#0  0xffffffffff60012d in ?? ()          
#1  0x00007fff185fd532 in ?? ()          
#2  0x00007f0e0783c1b9 in clock_gettime () from /lib/librt.so.1
#3  0x00007f0e0ba096f7 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007f0e0ba097b1 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007f0e0ba0a11f in ?? () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007f0e0ba08481 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007f0e075981d9 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0x00007f0e075988ff in ?? () from /usr/lib/libglib-2.0.so.0                    
#9  0x00007f0e075991a7 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0x00007f0e0ba08947 in QEventDispatcherGlib::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#11 0x00007f0e0b9e62cb in QEventLoop::processEvents () from /usr/lib64/qt4/libQtCore.so.4          
#12 0x00007f0e0b9e6428 in QEventLoop::exec () from /usr/lib64/qt4/libQtCore.so.4                   
#13 0x00007f0e0b9261b0 in QThread::exec () from /usr/lib64/qt4/libQtCore.so.4                      
#14 0x00007f0dfd643de0 in ?? () from /usr/lib64/kde4/plugins/phonon_backend/phonon_xine.so         
#15 0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                                 
#16 0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                                
#17 0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                             
#18 0x0000000000000000 in ?? ()                                                                    

Thread 6 (Thread 0x43eb7950 (LWP 27640)):
#0  0x00007f0e09ce0bb6 in poll () from /lib/libc.so.6
#1  0x00007f0df5144883 in ?? () from /usr/lib64/xine/plugins/1.25/xineplug_ao_out_alsa.so
#2  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                      
#3  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                   
#4  0x0000000000000000 in ?? ()                                                          

Thread 5 (Thread 0x446b8950 (LWP 27641)):
#0  0x00007f0e0b6be9a9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0dfd3fcf05 in ?? () from /usr/lib64/libxine.so.1                         
#2  0x00007f0dfd3fdcd5 in ?? () from /usr/lib64/libxine.so.1                         
#3  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                  
#4  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                               
#5  0x0000000000000000 in ?? ()                                                      

Thread 4 (Thread 0x44eb9950 (LWP 27642)):
#0  0x00007f0e0b6be9a9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0e0b928f31 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4 
#2  0x00007f0e0d7a9e09 in Digikam::LoadSaveThread::run (this=0x14947c0) at /var/tmp/portage/media-gfx/digikam-0.10.0/work/digikam-0.10.0/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                                                                                                                
#4  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                                                                                                               
#5  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                                                                                                            
#6  0x0000000000000000 in ?? ()                                                                                                                                                   

Thread 3 (Thread 0x456ba950 (LWP 27643)):
#0  0x00007f0e0b6be9a9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0e0b928f31 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4 
#2  0x00007f0e0d7a9e09 in Digikam::LoadSaveThread::run (this=0x1a43340) at /var/tmp/portage/media-gfx/digikam-0.10.0/work/digikam-0.10.0/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                                                                                                                
#4  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                                                                                                               
#5  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                                                                                                            
#6  0x0000000000000000 in ?? ()                                                                                                                                                   

Thread 2 (Thread 0x45ebb950 (LWP 27646)):
#0  0x00007f0e0b6bec2d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0e0b928f0f in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4      
#2  0x00007f0e0b9213ba in ?? () from /usr/lib64/qt4/libQtCore.so.4                        
#3  0x00007f0e0b928752 in ?? () from /usr/lib64/qt4/libQtCore.so.4                        
#4  0x00007f0e0b6ba087 in start_thread () from /lib/libpthread.so.0                       
#5  0x00007f0e09ce8ccd in clone () from /lib/libc.so.6                                    
#6  0x0000000000000000 in ?? ()                                                           

Thread 1 (Thread 0x7f0e102ba760 (LWP 27630)):
[KCrash Handler]                             
#5  KIPIPicasawebExportPlugin::PicasawebWindow::slotAddPhotoNext (this=0x22ffeb0) at /usr/include/qt4/QtCore/qlinkedlist.h:93
#6  0x00007f0df1f05129 in KIPIPicasawebExportPlugin::PicasawebWindow::slotUploadImages (this=0x22ffeb0)                      
    at /var/tmp/portage/media-plugins/kipi-plugins-0.2.0/work/kipi-plugins-0.2.0/picasawebexport/picasawebwindow.cpp:488     
#7  0x00007f0df1f0609d in KIPIPicasawebExportPlugin::PicasawebWindow::qt_metacall (this=0x22ffeb0, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7fff1841bea0)
    at /var/tmp/portage/media-plugins/kipi-plugins-0.2.0/work/kipi-plugins_build/picasawebexport/picasawebwindow.moc:110                                       
#8  0x00007f0e0b9f64c5 in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007f0e0add39cb in QAbstractButton::clicked () from /usr/lib64/qt4/libQtGui.so.4
#10 0x00007f0e0abb8538 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#11 0x00007f0e0abb99fa in ?? () from /usr/lib64/qt4/libQtGui.so.4
#12 0x00007f0e0abb9b97 in QAbstractButton::mouseReleaseEvent () from /usr/lib64/qt4/libQtGui.so.4
#13 0x00007f0e0a8d434a in QWidget::event () from /usr/lib64/qt4/libQtGui.so.4
#14 0x00007f0e0abb8f8b in QAbstractButton::event () from /usr/lib64/qt4/libQtGui.so.4
#15 0x00007f0e0ac35196 in QPushButton::event () from /usr/lib64/qt4/libQtGui.so.4
#16 0x00007f0e0a892989 in QApplicationPrivate::notify_helper () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007f0e0a899a89 in QApplication::notify () from /usr/lib64/qt4/libQtGui.so.4
#18 0x00007f0e0c7cc636 in KApplication::notify (this=0x7fff1841d390, receiver=0x22fa9e0, event=0x7fff1841c7d0)
    at /var/tmp/portage/kde-base/kdelibs-4.2.1-r2/work/kdelibs-4.2.1/kdeui/kernel/kapplication.cpp:307
#19 0x00007f0e0b9e6ccc in QCoreApplication::notifyInternal () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007f0e0a8977f9 in QApplicationPrivate::sendMouseEvent () from /usr/lib64/qt4/libQtGui.so.4
#21 0x00007f0e0a8e8d9a in ?? () from /usr/lib64/qt4/libQtGui.so.4
#22 0x00007f0e0a8e77dd in QApplication::x11ProcessEvent () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007f0e0a9098c7 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#24 0x00007f0e07595d3f in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#25 0x00007f0e07598c5d in ?? () from /usr/lib/libglib-2.0.so.0
#26 0x00007f0e075991a7 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#27 0x00007f0e0ba08930 in QEventDispatcherGlib::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007f0e0a9096ec in ?? () from /usr/lib64/qt4/libQtGui.so.4
#29 0x00007f0e0b9e62cb in QEventLoop::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#30 0x00007f0e0b9e6428 in QEventLoop::exec () from /usr/lib64/qt4/libQtCore.so.4
#31 0x00007f0e0b9e7e43 in QCoreApplication::exec () from /usr/lib64/qt4/libQtCore.so.4
#32 0x0000000000653531 in main (argc=<value optimized out>, argv=0x7fff1841db58) at /var/tmp/portage/media-gfx/digikam-0.10.0/work/digikam-0.10.0/digikam/main.cpp:190
Comment 1 Luka Renko 2009-03-21 21:25:01 UTC
I cnd confirm this issue - will work on additional check for this case.
Comment 2 Luka Renko 2009-03-22 22:55:14 UTC
SVN commit 942928 by lure:

Fix crash when Start upload is done before user selects/creates album
(now proper error message will be shown).

Also issue error message when list of photos is empty and user need to
select/add them to the list.

Clear album combo box when Album list is requested and returned empty or
failed.

BUG: 187809


 M  +2 -1      NEWS  
 M  +22 -26    picasawebexport/picasawebwindow.cpp  
 M  +2 -0      picasawebexport/picasawebwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=942928