Fix crash when Start upload is done before user selects/creates album (now proper error message will be shown).

Also issue error message when list of photos is empty and user need to
select/add them to the list.

Clear album combo box when Album list is requested and returned empty or
failed.

BUG: 187809

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=942928